--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 <li><a href="#frame">Фреймы</a> </li>
                 <li><a href="#size">Размер страницы сайта</a></li>
                 <li><a href="#silk">Нерабочие ссылки</a> </li>
-                <li><a href="#only_silk">URL (чистые ссылки)</a> </li>
+                <li><a href="#struck">URL (чистые ссылки)</a> </li>
                 <li><a href="#silk_social">Ссылки на соцсети на вашем сайте</a></li>
               </ul>
             </div>
@@ -288,7 +288,7 @@
               </div>
               <ul>
                 <li><a href="#adaptive">Адаптация под мобильные устройства</a></li>
-                <li><a href="#wiev">Mobile View (вид на телефоне)</a></li>
+                <li><a href="#adaptive_wiev">Mobile View (вид на телефоне)</a></li>
                 <li><a href="#flash">Flash-контент в мобильной версии</a></li>
               </ul>
             </div>
@@ -299,7 +299,7 @@
                 <h5>Поисковая оптимизация</h5>
               </div>
               <ul>
-                <li><a href="#privcy">Безопасный просмотр сайта</a></li>
+                <li><a href="#no_error">Безопасный просмотр сайта</a></li>
                 <li><a href="#email">E-mail privacy</a></li>
                 <li><a href="#not_fount">404 Not Found (страница ошибки)</a></li>
               </ul>
@@ -321,9 +321,9 @@
                 <li><a href="#w3c"> W3C Validity</a></li>
                 <li><a href="#sitemap">Sitemap</a> </li>
                 <li><a href="#robots">Robots.txt (файл с правилами <br /> индексации)</a> </li>
-                <li><a href="#">URL (чистые ссылки — без символов)</a> </li>
-                <li><a href="#">Поддержка в URL</a></li>
-                <li><a href="#">Canonical IP (IP-канонизация)</a></li>
+                <li><a href="#struck">URL (чистые ссылки — без символов)</a> </li>
+                <li><a href="#pch_url">Поддержка в URL</a></li>
+                <li><a href="#ip_first">Canonical IP (IP-канонизация)</a></li>
                 <li><a href="#wvw">Редирект с WWW на без-WWW</a></li>
                 <li><a href="#lang">Lang (язык сайта)</a></li>
                 <li><a href="#ip">IP-адрес сервера</a></li>
@@ -1355,7 +1355,7 @@
                 </picture>
               </div>
             </div>
-            <div id="ip" class="analytics_page_item d-flex align-items-center justify-content-between">
+            <div id="ip_first" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
@@ -2178,9 +2178,9 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/mobile/21.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/desctop/21.png" />
-                  <img src="assets/images/desctop/21.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/20.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/20.png" />
+                  <img src="assets/images/desctop/20.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left text-end">
@@ -3303,7 +3303,7 @@
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
             </div>
-            <div id="adaptive" class="analytics_page_item d-flex align-items-center justify-content-between">
+            <div id="no_error" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
                 <span class="number">31.</span>
                 <h2 class="section_title">
@@ -3392,7 +3392,7 @@
                 </picture>
               </div>
             </div>
-            <div id="wiev" class="analytics_page_item d-flex align-items-center justify-content-between">
+            <div id="adaptive" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
@@ -4023,7 +4023,7 @@
                 </picture>
               </div>
             </div>
-            <div class="analytics_page_item d-flex align-items-center justify-content-between">
+            <div id="schot" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
