--- a/analystics.html
+++ b/analystics.html
@@ -5,35 +5,40 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Seo Studio</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/bootstrapadd.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.8/inputmask.min.js"></script>
   <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
+
 <body>
   <div class="wrapper">
-    <main>
+    <main class="analytics_page">
       <section class="hero">
-        <div class="container">
-          <h1 class="hero_title d-flex align-items-center justify-content-center">
-            Анализ сайта
-          </h1>
-          <p class="hero_text text-center">
-            Сделайте бесплатную проверку SEO продвижения (оптимизации) сайта и
-            скачайте SEO pdf отчёт.
-          </p>
-          <form action="" class="hero_form d-flex align-items-center justify-content-center flex-wrap">
-            <label class="hero_form_input">
-              <input type="text" placeholder="Адрес вашего сайта" name="location" />
-            </label>
-            <button class="button">Анализировать сайт</button>
-            <p>
-              Отправляя заявку, Вы соглашаетесь с
-              <a href="https://seo.computer/ru/policy">Политикой Конфиденциальности</a>
+        <div class="container d-flex align-items-center justify-content-between">
+          <div class="hero_left">
+            <h1 class="hero_title">
+              Анализатор сайта
+            </h1>
+            <p class="hero_text ">
+              Используйте бесплатный сканер SEO оптимизации (продвижения) сайта и загрузите PDF отчет о состоянии сайта
+              онлайн. Получите консультацию СЕОшника и если нужно закажите исправления ошибок в SEO сайта.
             </p>
-          </form>
-          <div class="hero_images d-flex justify-content-center">
-            <img src="assets/images/hero_desctop.png" alt="" />
-            <img src="assets/images/hero_mobile.png" alt="" />
+            <form action="" class="hero_form d-flex align-items-center  flex-wrap">
+              <label class="hero_form_input">
+                <input type="text" placeholder="Адрес вашего сайта" name="location" />
+              </label>
+              <button class="button d-flex align-items-center justify-content-center">
+                <img src="assets/images/search.svg" alt=""><span>Анализировать сайт</span>
+              </button>
+              <p>
+                Отправляя заявку, Вы соглашаетесь с
+                <a href="https://seo.computer/ru/policy">Политикой Конфиденциальности</a>
+              </p>
+            </form>
+          </div>
+          <div class="hero_img">
+            <img src="assets/images/hero_img2.png" alt="" />
           </div>
         </div>
       </section>
@@ -80,10 +85,10 @@
       </section>
       <section class="seo_price">
         <div class="container">
-          <h2 class="section_title text-center">
+          <h2 class="section_title text-center text-white">
             Цены на анализ сайтов, аудит сайтов SEO онлайн
           </h2>
-          <p class="section_description text-center">
+          <p class="section_description text-center text-white">
             Выберите SEO план, который подходит Вам
           </p>
           <div class="seo_price_items d-flex justify-content-between">
@@ -137,6 +142,7 @@
               </ul>
             </div>
             <div class="seo_price_item d-flex flex-column justify-content-between">
+              <div class="toptitle">Выбор пользователей</div>
               <div class="seo_price_item_info">
                 <div class="seo_price_item_top d-flex flex-column">
                   <p class="text-center">SEO аудит (ручной)</p>
@@ -5405,7 +5411,7 @@
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.9/jquery.inputmask.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.6/dist/js/bootstrap.min.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 
