--- a/analystics.html
+++ b/analystics.html
@@ -86,11 +86,8 @@
       <section class="seo_price">
         <div class="container">
           <h2 class="section_title text-center text-white">
-            Цены на анализ сайтов, аудит сайтов SEO онлайн
+            Цены анализатора сайтов, аудитора <br> сайтов SEO онлайн
           </h2>
-          <p class="section_description text-center text-white">
-            Выберите SEO план, который подходит Вам
-          </p>
           <div class="seo_price_items d-flex justify-content-between">
             <div class="seo_price_item d-flex flex-column justify-content-between">
               <div class="seo_price_item_info">
@@ -146,7 +143,7 @@
               <div class="seo_price_item_info">
                 <div class="seo_price_item_top d-flex flex-column">
                   <p class="text-center">SEO аудит (ручной)</p>
-                  <h4 class="text-center">
+                  <h4 class="text-center" style="color: #2b72f4;">
                     Подойдет если требуется профессиональное продвижение сайта
                   </h4>
                 </div>
@@ -234,8 +231,7 @@
       <section class="seo_analysis">
         <div class="container">
           <h2 class="section_title text-center">
-            Анализ сайта по множеству SEO параметров <br />
-            <span>влияющих на оптимизацию продвижение сайта</span>
+            Анализатор сайта - анализирует SEO ошибки <br> сайта по многим параметрам
           </h2>
           <p class="section_description text-center">
             После анализа сайта вы получите подробный отчет более чем по 46
@@ -4846,7 +4842,7 @@
           <div class="online_site_items d-flex ">
             <div class="online_site_item d-flex flex-column">
               <div class="site_banner d-flex justify-content-center align-items-center">
-                <img src="assets/images/site_img1.png" alt="" />
+                <img src="assets/images/site_img6.png" alt="" />
               </div>
               <div class="site_info">
                 <p class="site_info_title text-center">
@@ -4856,27 +4852,27 @@
                 <h5 class="site_list_title">В чем польза:</h5>
                 <ul class="site_list d-flex flex-column">
                   <li class="d-flex align-items-center">
-                    <img src="assets/images/plus.svg" alt="" />
+                    <img src="assets/images/false.svg" alt="" />
                     <span>
                       Получают полную картину состояния своего сайта без технических знаний.
                     </span>
                   </li>
                   <li class="d-flex align-items-center">
-                    <img src="assets/images/plus.svg" alt="" />
+                    <img src="assets/images/false.svg" alt="" />
                     <span>
-                      Позволяет быстро находить технические ошибки и слабые места сайта.
+                      Могут оперативно выявить проблемы, которые снижают конверсию и трафик.
                     </span>
                   </li>
                   <li class="d-flex align-items-center">
-                    <img src="assets/images/plus.svg" alt="" />
+                    <img src="assets/images/false.svg" alt="" />
                     <span>
-                      Упрощает анализ конкурентов и оценку их ссылочных профилей.
+                      Помогает принимать обоснованные решения по улучшению сайта и продвижению.
                     </span>
                   </li>
                   <li class="d-flex align-items-center">
-                    <img src="assets/images/plus.svg" alt="" />
+                    <img src="assets/images/false.svg" alt="" />
                     <span>
-                      Обеспечивает точные метрики для отчётов клиентам и руководству.
+                      Экономит деньги, позволяя избежать лишних затрат на неэффективное продвижение.
                     </span>
                   </li>
                 </ul>
@@ -4884,7 +4880,7 @@
             </div>
             <div class="online_site_item d-flex flex-column">
               <div class="site_banner d-flex justify-content-center align-items-center">
-                <img src="assets/images/site_img2.png" alt="" />
+                <img src="assets/images/site_img5.png" alt="" />
               </div>
               <div class="site_info">
                 <p class="site_info_title text-center">
@@ -4899,8 +4895,7 @@
                   </li>
                   <li class="d-flex align-items-center">
                     <img src="assets/images/false.svg" alt="" />
-                    <span>Эффективно выявляют технические ошибки и уязвимости
-                      сайта.</span>
+                    <span>Позволяет быстро находить технические ошибки и слабые места сайта.</span>
                   </li>
                   <li class="d-flex align-items-center ">
                     <img src="assets/images/false.svg" alt="" />
@@ -4917,7 +4912,7 @@
             </div>
             <div class="online_site_item d-flex  flex-column">
               <div class="site_banner d-flex justify-content-center align-items-center">
-                <img src="assets/images/site_img3.png" alt="site item3" />
+                <img src="assets/images/site_img4.png" alt="site item4" />
               </div>
               <div class="site_info">
                 <p class="site_info_title text-center">
@@ -4927,23 +4922,21 @@
                 <ul class="site_list d-flex flex-column">
                   <li class="d-flex align-items-center">
                     <img src="assets/images/false.svg" alt="" />
-                    <span>Обнаруживают проблемы с производительностью и загрузкой
-                      страниц.</span>
+                    <span>Помогает выявить проблемы с производительностью, скоростью загрузки и техническими
+                      параметрами.</span>
                   </li>
                   <li class="d-flex align-items-center">
                     <img src="assets/images/false.svg" alt="" />
-                    <span>Облегчают процесс выявления и устранения технических
-                      неполадок.</span>
+                    <span>Упрощает диагностику ошибок на сайте и их быстрое устранение.</span>
                   </li>
                   <li class="d-flex align-items-center">
                     <img src="assets/images/false.svg" alt="" />
-                    <span>Контролируют качество кода с точки зрения SEO и
-                      удобства пользователя.</span>
+                    <span>Позволяет контролировать качество кода с точки зрения SEO и юзабилити.</span>
                   </li>
                   <li class="d-flex align-items-center">
                     <img src="assets/images/false.svg" alt="" />
-                    <span>Улучшают взаимодействие с маркетологами, поддерживая
-                      техническую сторону SEO-инициатив.</span>
+                    <span>Повышает эффективность совместной работы с маркетинговой командой, обеспечивая техническую
+                      поддержку SEO-инициатив.</span>
                   </li>
                 </ul>
               </div>
@@ -5113,12 +5106,10 @@
               </div>
               <div class="date">25 мая 2025</div>
             </div>
-
-
             <div class="comments_item d-flex flex-column">
               <div class="comments_item_top d-flex flex-column">
                 <div class="comments_item_top_content d-flex align-items-center">
-                  <img src="assets/images/user_logo5.png" alt="" />
+                  <img src="assets/images/logo_user4.png" alt="" />
                   <div class="comments_item_top_info">
                     <h3>Наталья Сергеева</h3>
                     <div class="stars d-flex align-items-center">
