--- a/analystics.html
+++ b/analystics.html
@@ -231,12 +231,11 @@
       <section class="seo_analysis">
         <div class="container">
           <h2 class="section_title text-center">
-            Анализатор сайта - анализирует SEO ошибки <br> сайта по многим параметрам
+            Анализатор сайта - анализирует SEO ошибки <br> сайта <span>по многим параметрам</span>
           </h2>
-          <p class="section_description text-center">
-            После анализа сайта вы получите подробный отчет более чем по 46
-            ключевым SEO показателям, включая:
-          </p>
+          <p class="section_description text-center">Наш анализатор сайта предоставит подробный SEO PDF отчет более чем
+            по 46 показателям влияющих на оптимизацию и продвижение сайта, включая:</p>
+
           <div class="seo_audit__blocks seo_audit__columns">
             <div class="seo_audit__block">
               <div class="seo_audit__block_header">
