--- a/analystics.html
+++ b/analystics.html
@@ -325,7 +325,7 @@
                 <li><a href="#wvw">Редирект с WWW на без-WWW</a></li>
                 <li><a href="#lang">Lang (язык сайта)</a></li>
                 <li><a href="#ip">IP-адрес сервера</a></li>
-                <li><a href="#analytics_item">Аналитика сайта</a></li>
+                <li><a href="#schot">Аналитика сайта</a></li>
               </ul>
             </div>
           </div>
