--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/inputmask/5.0.8/inputmask.min.js"></script>
   <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
+
 <body>
   <div class="wrapper">
     <main>
@@ -5178,43 +5179,37 @@
           <div class="faq_items d-flex flex-column">
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Как сделать полный SEO анализ страницы сайта с помощью SEO
-                COMPUTER?
+                Как сделать полный SEO анализ страницы сайта с помощью ANALYTICS SEO COMPUTER?
               </div>
               <div class="faq_item_text">
-                Просто введите URL страницы в поле на платформе и нажмите
-                “Анализировать”. Через несколько секунд вы получите оценку
-                качества страницы по основным параметрам SEO. SEO COMPUTER
-                предоставит подробную информацию о всех проблемах страницы и
-                даст рекомендации, как их устранить.
+                Введите URL страницы в поле, нажмите “Анализировать”, и через несколько секунд вы получите SEO оценку
+                качества страницы по ключевым параметрам поисковой оптимизации. ANALYTICS SEO COMPUTER поможет вам
+                увидеть все проблемы на странице и предложит рекомендации по их устранению. 
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Что означает “SEO оценка сайта”?
+                Что означает “SEO рейтинг сайта”?
               </div>
               <div class="faq_item_text">
-                SEO оценка сайта — это показатель, который оценивает состояние
-                страницы на основе таких факторов, как скорость загрузки и
-                наличие ошибок (критических, предупреждений и уведомлений).
-                Эта SEO оценка помогает понять, насколько страница сайта
-                оптимизирована для поисковых систем, и служит ориентиром для
-                дальнейших улучшений.
+                “SEO рейтинг сайта” - это наш внутренний показатель, который оценивает состояние страницы на основе
+                таких факторов, как скорость загрузки (Google Page Speed) и количество SEO ошибок: критических,
+                предупреждений и уведомлений. Этот показатель служит для отслеживания изменений на странице после
+                оптимизации.
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Как работать с полученными SEO результатами анализа сайта?
+                Как работать с полученными результатами от SEO анализатора сайта?
               </div>
               <div class="faq_item_text">
-                Чтобы узнать, как устранить конкретные SEO ошибки, нажмите “?”
-                рядом с проблемой и следуйте пошаговой инструкции
+                Чтобы узнать, как исправить конкретные SEO ошибки, нажмите на “?” рядом с проблемой и следуйте
+                инструкциям.
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Какое влияние SEO ошибок на ранжирование страницы/сайта в
-                поисковых системах?
+                Как SEO ошибки влияют на ранжирование страницы/сайта в поисковых системах?
               </div>
               <div class="faq_item_text">
                 Правильная SEO оптимизация страницы и технический аудит сайта
@@ -5230,7 +5225,7 @@
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Как оценить влияние SEO изменений на трафик и позиции сайта?
+                Как оценить влияние изменений на трафик и позиции после исправления SEO ошибок?
               </div>
               <div class="faq_item_text">
                 После исправления ошибок в SEO, зафиксируйте изменения в
@@ -5246,28 +5241,18 @@
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Я хочу исправить SEO ошибки на сайт по рекомендациям, но у
-                меня нет навыков для выполнения изменений. Вы можете помочь
-                мне с этим?
+                Что делать, если у меня нет навыков для исправления SEO ошибок?
               </div>
               <div class="faq_item_text">
-                Конечно! Специалисты SEO COMPUTER могут помочь вам исправить
-                все SEO ошибки на вашем сайте. Мы предлагаем вам полный спектр
-                услуг, от анализа до технической реализации оптимизации.
+                ANALYTICS SEO COMPUTER не только помогает обнаруживать SEO ошибки, но и предоставляет пошаговые инструкции для их устранения. Если вам сложно справиться самостоятельно, вы можете обратиться за помощью к специалистам ANALYTICS SEO COMPUTER, которые помогут вам исправить ошибки на вашем сайте.
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Я проверил в SEO COMPUTER крупнейшие сайты и увидел много
-                технических ошибок. Почему они не их исправляют?
+                Что делать, если крупные сайты также имеют SEO ошибки?
               </div>
               <div class="faq_item_text">
-                Многие крупные сайты акцентируют внимание на других источниках
-                трафика, таких как социальные сети, реферальные ссылки и
-                email-маркетинг, а не на поисковых системах. В таких случаях
-                исправление SEO ошибок может не быть приоритетом. Однако для
-                большинства сайтов, оптимизация под поисковые системы имеет
-                огромное значение.
+                Некоторые крупные сайты могут сосредотачиваться на других источниках трафика, таких как реферальные, социальные сети или email маркетинг. В таких случаях SEO оптимизация не является приоритетом. Однако для вашего сайта важно исправлять SEO ошибки, чтобы улучшить позиции в поисковых системах и увеличить органический трафик.
               </div>
             </div>
           </div>
