start rewiev page

--- a/analystics.html
+++ b/analystics.html
@@ -4594,43 +4594,37 @@
           <div class="faq_items d-flex flex-column">
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Как сделать полный SEO анализ страницы сайта с помощью SEO
-                COMPUTER?
+                Как сделать полный SEO анализ страницы сайта с помощью ANALYTICS SEO COMPUTER?
               </div>
               <div class="faq_item_text">
-                Просто введите URL страницы в поле на платформе и нажмите
-                “Анализировать”. Через несколько секунд вы получите оценку
-                качества страницы по основным параметрам SEO. SEO COMPUTER
-                предоставит подробную информацию о всех проблемах страницы и
-                даст рекомендации, как их устранить.
+                Введите URL страницы в поле, нажмите “Анализировать”, и через несколько секунд вы получите SEO оценку
+                качества страницы по ключевым параметрам поисковой оптимизации. ANALYTICS SEO COMPUTER поможет вам
+                увидеть все проблемы на странице и предложит рекомендации по их устранению. 
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Что означает “SEO оценка сайта”?
+                Что означает “SEO рейтинг сайта”?
               </div>
               <div class="faq_item_text">
-                SEO оценка сайта — это показатель, который оценивает состояние
-                страницы на основе таких факторов, как скорость загрузки и
-                наличие ошибок (критических, предупреждений и уведомлений).
-                Эта SEO оценка помогает понять, насколько страница сайта
-                оптимизирована для поисковых систем, и служит ориентиром для
-                дальнейших улучшений.
+                “SEO рейтинг сайта” - это наш внутренний показатель, который оценивает состояние страницы на основе
+                таких факторов, как скорость загрузки (Google Page Speed) и количество SEO ошибок: критических,
+                предупреждений и уведомлений. Этот показатель служит для отслеживания изменений на странице после
+                оптимизации.
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Как работать с полученными SEO результатами анализа сайта?
+                Как работать с полученными результатами от SEO анализатора сайта?
               </div>
               <div class="faq_item_text">
-                Чтобы узнать, как устранить конкретные SEO ошибки, нажмите “?”
-                рядом с проблемой и следуйте пошаговой инструкции
+                Чтобы узнать, как исправить конкретные SEO ошибки, нажмите на “?” рядом с проблемой и следуйте
+                инструкциям.
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
               <div class="faq_item_header">
-                Какое влияние SEO ошибок на ранжирование страницы/сайта в
-                поисковых системах?
+                Как SEO ошибки влияют на ранжирование страницы/сайта в поисковых системах?
               </div>
               <div class="faq_item_text">
                 Правильная SEO оптимизация страницы и технический аудит сайта важны для поисковых систем. Оптимизировав
@@ -4638,7 +4632,6 @@
                 - Увеличить органический трафик через правильное заполнение мета-тегов. <br>
                 - Улучшить позиции сайта в поисковых системах благодаря ускорению загрузки и исправлению ошибок. <br>
                 - Закрыть основные уязвимости и предотвратить конкуренцию с использованием нечестных методов.
-
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
@@ -4662,6 +4655,7 @@
                 ANALYTICS SEO COMPUTER не только помогает обнаруживать SEO ошибки, но и предоставляет пошаговые
                 инструкции для их устранения. Если вам сложно справиться самостоятельно, вы можете обратиться за помощью
                 к специалистам ANALYTICS SEO COMPUTER, которые помогут вам исправить ошибки на вашем сайте.
+
               </div>
             </div>
             <div class="faq_item d-flex flex-column">
