--- a/rewiev.html
+++ b/rewiev.html
@@ -23,6 +23,35 @@
           <img src="./assets/images/rewiev_hero.png" alt="">
         </div>
       </section>
+      <section class="seo_score">
+        <div class="container">
+          <div class="seo_score_sidebar">
+            <ul class="seo_score_sidebar_items d-flex flex-column ">
+              <li><a href="#" class="d-flex align-items-center active"><img src="assets/images/link_icon1.png" alt="">
+                  <span>SEO оценка</span></a>
+              </li>
+              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon2.png" alt="">
+                  <span>Оптимизация</span></a></li>
+              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon3.png" alt="">
+                  <span>Юзабилити</span></a></li>
+              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon4.png" alt="">
+                  <span>Моб. Телефон</span></a></li>
+              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon5.png" alt="">
+                  <span>Тех. Часть</span></a></li>
+              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon6.png" alt="">
+                  <span>Соц. Сети</span></a></li>
+              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon7.png" alt="">
+                  <span>Ссылки</span></a></li>
+              <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon8.png" alt="">
+                  <span>Скачать PDF</span></a></li>
+              <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon9.png" alt="">
+                  <span>Поделиться</span></a></li>
+              <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon10.png" alt="">
+                  <span>Обновить отчет</span></a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </div>
   <!-- Modal -->
