--- a/rewiev.html
+++ b/rewiev.html
@@ -24,31 +24,131 @@
         </div>
       </section>
       <section class="seo_score">
-        <div class="container">
-          <div class="seo_score_sidebar">
-            <ul class="seo_score_sidebar_items d-flex flex-column ">
-              <li><a href="#" class="d-flex align-items-center active"><img src="assets/images/link_icon1.png" alt="">
-                  <span>SEO оценка</span></a>
-              </li>
-              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon2.png" alt="">
-                  <span>Оптимизация</span></a></li>
-              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon3.png" alt="">
-                  <span>Юзабилити</span></a></li>
-              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon4.png" alt="">
-                  <span>Моб. Телефон</span></a></li>
-              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon5.png" alt="">
-                  <span>Тех. Часть</span></a></li>
-              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon6.png" alt="">
-                  <span>Соц. Сети</span></a></li>
-              <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon7.png" alt="">
-                  <span>Ссылки</span></a></li>
-              <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon8.png" alt="">
-                  <span>Скачать PDF</span></a></li>
-              <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon9.png" alt="">
-                  <span>Поделиться</span></a></li>
-              <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon10.png" alt="">
-                  <span>Обновить отчет</span></a></li>
-            </ul>
+        <div class="container ">
+          <div class="d-flex justify-content-between w-100 seo_score_component flex-wrap">
+            <div class="seo_score_sidebar">
+              <ul class="seo_score_sidebar_items d-flex flex-column ">
+                <li><a href="#" class="d-flex align-items-center active"><img src="assets/images/link_icon1.png" alt="">
+                    <span>SEO оценка</span></a>
+                </li>
+                <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon2.png" alt="">
+                    <span>Оптимизация</span></a></li>
+                <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon3.png" alt="">
+                    <span>Юзабилити</span></a></li>
+                <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon4.png" alt="">
+                    <span>Моб. Телефон</span></a></li>
+                <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon5.png" alt="">
+                    <span>Тех. Часть</span></a></li>
+                <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon6.png" alt="">
+                    <span>Соц. Сети</span></a></li>
+                <li><a href="#" class="d-flex align-items-center"><img src="assets/images/link_icon7.png" alt="">
+                    <span>Ссылки</span></a></li>
+                <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon8.png" alt="">
+                    <span>Скачать PDF</span></a></li>
+                <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon9.png" alt="">
+                    <span>Поделиться</span></a></li>
+                <li><a href="#" class="d-flex align-items-center last"><img src="assets/images/link_icon10.png" alt="">
+                    <span>Обновить отчет</span></a></li>
+              </ul>
+            </div>
+            <div class="seo_score_content d-flex  justify-content-between flex-wrap">
+              <div class="d-flex justify-content-between align-items-end top_content">
+                <h2 class="section_title">Оценка SEO оптимизации сайта</h2>
+                <span class="d-flex align-items-center"><img src="assets/images/time.svg" alt=""><span>5 июня 2025
+                    07:27:22</span></span>
+              </div>
+              <div class="seo_score_content_top d-flex justify-content-between">
+                <div class="seo_score_content_progress d-flex flex-column justify-content-between">
+                  <div class="seo_score_content_progress_top">
+                    <a class="progress_link" href="https://seo.computer/ru">https://seo.computer/ru</a>
+                    <ul class="progress_lists d-flex flex-column">
+                      <li class="d-flex flex-column">
+                        <span class="d-flex align-items-center">
+                          <img src="assets/images/turue.svg" alt="">
+                          <span>Отлично (без SEO ошибок)</span>
+                        </span>
+                        <span class="progressbar">
+                          <span class="progressbar_thumb"
+                            style="background: linear-gradient(135deg, #27AE60, #158846); width: 65%;"></span>
+                        </span>
+                      </li>
+                      <li class="d-flex flex-column">
+                        <span class="d-flex align-items-center">
+                          <img src="assets/images/i.svg" alt="">
+                          <span>Терпимо (не критические, но ошибки в SEO требующие внимания)</span>
+                        </span>
+                        <span class="progressbar">
+                          <span class="progressbar_thumb"
+                            style="background: linear-gradient(135deg, #F39C12, #C7800F); width: 55%;"></span>
+                        </span>
+                      </li>
+                      <li class="d-flex flex-column">
+                        <span class="d-flex align-items-center">
+                          <img src="assets/images/x.svg" alt="">
+                          <span>Плохо (критические SEO ошибки)</span>
+                        </span>
+                        <span class="progressbar">
+                          <span class="progressbar_thumb"
+                            style="background: linear-gradient(135deg, #D81414, #A31010); width:5%;"></span>
+                        </span>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="seo_score_content_progress_bottom">
+                    <h3 class="btn_lists_title">Ошибки, требующие внимания</h3>
+                    <ul class="btn_lists d-flex flex-wrap">
+                      <li><a href="#">Title</a></li>
+                      <li><a href="#">KeyWords</a></li>
+                      <li><a href="#">Backlinks</a></li>
+                      <li><a href="#">Frames</a></li>
+                      <li><a href="#">Тех. часть</a></li>
+                      <li><a href="#">Headings</a></li>
+                    </ul>
+
+                  </div>
+                </div>
+                <div class="seo_score_content_left d-flex flex-column justify-content-center align-items-center">
+                  <div class="seo_circle">
+                    <div class="seo_inner">
+                      <div class="score">51</div>
+                      <div class="label">Общая SEO оценка</div>
+                    </div>
+                  </div>
+                  <div class="seo_sircle_body">
+                    <h3 class="seo_sircle_title text-center">Исправить SEO ошибки</h3>
+                    <p class="text-center">Примерная цена услуг по исправлению ошибок</p>
+                    <div class="price text-center">45 000₽</div>
+                    <a href="#" class="button w-100">Заказать исправление</a>
+                    <a href="#" class="button no_bg w-100">Заказать исправление</a>
+                  </div>
+
+                </div>
+              </div>
+              <div class="seo_score_block">
+                <div class="seo_score_banner d-flex justify-content-between align-items-center">
+                  <h2 class="section_title">Нужен расширенный SEO анализ?</h2>
+                  <a class="button no_bg">
+                    Заказать за 10 000₽
+                  </a>
+                </div>
+                <h3 class="section_title seo_score_block_title">Анализ поисковой оптимизации (внутренней)</h3>
+                <div class="seo_score_items d-flex flex-column">
+                  <div class="seo_score_item">
+                    <div class="seo_score_item_header">
+                      01. Title (заголовок страницы)
+                    </div>
+                    <div class="seo_score_item_body">
+                      <div class="seo_score_item_body_top">
+                        <img src="assets/images/turue.svg" alt="">
+                        <span>SEO | SEO - продвижение сайтов | SEO COMPUTER</span>
+                      </div>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
