--- a/rewiev.html
+++ b/rewiev.html
@@ -495,8 +495,6 @@
                         <li class="tag_column d-flex align-items-center">
                           &lt;H2&gt; <span>Отзывы о SEO продвижение сайта</span> &nbsp; &lt;/H2&gt;
                         </li>
-
-                        <!-- H3 bloklar -->
                         <li class="tag_column d-flex align-items-center">
                           &lt;H3&gt; <span>Добавление УТП (уникального торгового предложения) на страницы сайта</span>
                           &nbsp; &lt;/H3&gt;
@@ -555,14 +553,13 @@
                             контента</span> &nbsp; &lt;/H3&gt;
                         </li>
                         <li class="tag_column d-flex align-items-center">
-                          &lt;H3&gt; <span>Создание поддомена (каталога) на сайте для переноса на них старых разделов
+                          &lt;H3&gt; 
+                          <span>Создание поддомена (каталога) на сайте для переноса на них старых разделов
                             сайта</span> &nbsp; &lt;/H3&gt;
                         </li>
                         <li class="tag_column d-flex align-items-center">
                           &lt;H3&gt; <span>Создание поддомена для мобильной версии сайта</span> &nbsp; &lt;/H3&gt;
                         </li>
-                      </ul>
-
                       </ul>
                       <a href="#" class="content_btn d-flex align-items-center justify-content-center items_btn">
                         <span>Показать больше</span>
