--- a/rewiev.html
+++ b/rewiev.html
@@ -592,7 +592,7 @@
                           <p class="all_content_title " style="margin-top: 36px;">
                             Чем полезен
                           </p>
-                          <p class="all_content_text">
+                          <div class="all_content_text">
                           <p class="all_content_title_sm">1. Влияет на SEO</p>
                           <p class="all_content_text">
                             Title показывает название конкретной страницы сайта. Он сообщает поисковым системам, о чём
@@ -607,7 +607,7 @@
                           <p class="all_content_text">
                             Пользователь сразу понимает, о чём страница, ещё до её открытия.
                           </p>
-                          </p>
+                          </div>
                           <p class="all_content_title " style="margin-top: 36px;">
                             На что смотреть
                           </p>
