--- a/rewiev.html
+++ b/rewiev.html
@@ -801,7 +801,7 @@
                           </span>
                           <div class="seoBox6 suggestionBox" style="display: block;">
                             <b>Что такое Img alt Attribute (альтернативный текст для картинок)?</b><br>
-                            Alt — это атрибут HTML-тега `<img>`, предназначенный для текстового описания изображения. Он
+                            Alt — это атрибут HTML-тега `&gt; img &gt;`, предназначенный для текстового описания изображения. Он
                             служит альтернативой картинке в случаях, когда она не загружается, и используется
                             программами чтения экрана для слабовидящих.<br><br>
 
@@ -810,7 +810,6 @@
                             – содержание и смысл изображения, если оно не отображается;<br>
                             – текст, который читают экранные дикторы для доступа людям с нарушениями зрения;<br>
                             – поисковикам ключевую информацию о том, что изображено на картинке.<br><br>
-
                             <b>Чем полезен Img alt Attribute (альтернативный текст для картинок)?</b><br>
                             Alt полезен тем, что:<br>
                             – улучшает SEO и позволяет изображениям появляться в результатах Google Картинки;<br>
